atualizando os metodos do controller e do service da Classe Guest